MDEV-37667 SIGSEGV on ALTER on locked GTT in low memory env

Alter table, as one of its stages, creates a temporary table from a
given table. If something goes wrong, this table will be freed.

We never distinguished a child table of global temporary table and a
temporary table created from parent for internal purposes, as this one:
They are even added to the temporary_tables list as a normal tmp table.

This commit denotes a difference for global temporary tables as with
share->mdl_request.ticket set to NULL.

Fix:
If it's a temporary table created from global temporary table for
internal purposes,
1. do not free mdl_ticket
2. do not alter global_temporary_tables_count

Parent issue:
MDEV-35915 Implement Global temporary tables